--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: fennek
-  password: asdwsx123
+  username:
+  password:
 
 development:
   <<: *default
